--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,5 @@ app.db# See https://help.github.com/articles/ignoring-files/ for more about igno
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+.vscode
