--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -37,6 +37,7 @@ chardet==3.0.4
 click==7.1.2
 cloudpickle==1.2.2
 clyent==1.2.2
+cognitiveatlas==0.1.9
 colorama==0.4.1
 conda==4.9.2
 conda-build==3.18.9
@@ -74,6 +75,7 @@ Flask-WTF==0.14.3
 fooof==1.0.0rc1
 fsspec==0.5.2
 future==0.18.2
+fuzzywuzzy==0.18.0
 gast==0.2.2
 gensim==3.8.3
 gevent==1.4.0
@@ -92,6 +94,7 @@ idna==2.10
 imageio==2.6.0
 imagesize==1.1.0
 importlib-metadata==0.23
+indexed-gzip==1.6.1
 ipykernel==5.1.2
 ipympl==0.7.0
 ipython==7.8.0
@@ -152,6 +155,8 @@ networkx==2.3
 neurodsp==2.0.0
 neurodynex==0.3.4
 nibabel==3.1.0
+nilearn==0.8.0
+NiMARE==0.0.9
 nltk==3.4.5
 nose==1.3.7
 notebook==6.0.1
@@ -200,6 +205,7 @@ pyflakes==2.1.1
 Pygments==2.9.0
 PyJWT==2.0.1
 pylint==2.4.2
+PyMARE==0.0.2
 pyodbc==4.0.27
 pyOpenSSL==19.0.0
 pyparsing==2.4.2
@@ -288,7 +294,6 @@ Werkzeug==1.0.1
 widgetsnbextension==3.5.1
 wrapt==1.11.2
 WTForms==2.3.3
-WTForms-JSON==0.3.3
 wurlitzer==1.0.3
 xlrd==1.2.0
 XlsxWriter==1.2.1
